# WallapopSales

./: 20250304_iphone_13_data.parquet  20250304_retroid_pocket_5_data.parquet  README.md  beautiful_soup_test.ipynb  data.json  data.parquet  pyproject.toml  selenium_test.py  wallapop_extract.py  wallapop_extract_test.ipynb
